# cpp-templates-2025-10-06

./: CMakeLists.txt  README.md
_exercises/ex-auto-declarations/: CMakeLists.txt  auto_declarations_ex.cpp
_exercises/ex-class-templates/: ex_class_templates.cpp
_exercises/ex-concepts/: concepts_and_constraints.cpp
_exercises/ex-template-functions/: ex_template_functions.cpp
_exercises/ex-variadic-templates/: variadic_templates.cpp
class-templates/: class_templates.cpp
concepts/: concepts.cpp
function-templates/: function_templates.cpp
metaprogramming/: metaprogramming.cpp
perfect-forwarding/: CMakeLists.txt  gadget.hpp  perfect_forwarding.cpp
policy-based-design/: policy_based_design.cpp
sfinae/: sfinae.cpp
traits-and-policies/: traits_and_policies.cpp
type-deduction/: type_deduction.cpp
type-traits/: type_traits.cpp
variadic-templates/: variadic_templates.cpp
